fixed display of search input on mobile+desktop

--- a/src/components/map/Map.css
+++ b/src/components/map/Map.css
@@ -42,3 +42,9 @@
   user-select: none;
   overflow: hidden;
 }
+
+@media (min-width: 768px) {
+  .map-search {
+    padding: 8px;
+  }
+}
